--- a/AI创造达人营 Ai creation camp/paddleclas实现数字手势识别.ipynb
+++ b/AI创造达人营 Ai creation camp/paddleclas实现数字手势识别.ipynb
@@ -6,72 +6,20 @@
     "collapsed": false
    },
    "source": [
-    "### 写在前面的话\n",
-    "受[大作业](https://aistudio.baidu.com/aistudio/projectdetail/2270454)的启发，将`.npy`转为类似格式的文件运行训练。  发现`.npy`似乎有些对应不上，遂找到原来的图像文件进行训练。  \n",
-    "目前只是依样画葫芦，很多参数设置等等还不明所以。  \n",
-    "我明白我自己的水平还远远不够，会不断探索。  \n",
-    "另，本项目需GPU环境"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "### 数据集说明\n",
-    "共有10个文件夹，共2062个文件，分别为0—9十个数字，对应相应的手势。  \n",
-    "图片大小为100像素×100像素，分辨率为72dpi，颜色模式为RGB模式。  \n",
+    "## 写在前面的话\n",
+    "我原本的目标是做一个手语识别的项目，我认为这涉及CV和NLP两个领域。  \n",
+    "首先是从图像/识别手势对应的语言文字，偏CV。其中有几个难点，比如数据集从哪里来。再比如手势与文字之间的转换到底是什么，手语是有地域特征的，不同地方的手语可能只有部分重合，就算是数字，表现形式也不一定相同。再比如说熟练的人打手语的速度很快，~~上下翻飞如同魔法结印现场~~，如何读取这种“连贯性”等等。当然，本项目不涉及这些难点，我没找到合适的拼音的数据集，本项目就从数字开始，仅仅是最简单的数字与手势的对应。  \n",
+    "然后是将存在极度省略、语序混乱、单纯拼写等问题的语言文字组成普通话角度易读性高的话，偏NLP。因为手势能表现的语言有限，所以手语的交流里充斥着简化、谐音等难以让机器理解的语言，如何良好地进行“翻译”也是一个很大的难点。\n",
+    "如果可能的话，也许会有逆向的过程，就是输入一句话，就能转化为简洁的手语，可以实现两个人的手语交互。  \n",
+    "当然，上面只是我的想法，也不知道对不对、能不能做出来hhh总之，先迎接一个轻松愉快的手势识别项目啦。\n",
     "\n",
-    "目录结构  \n",
-    "```\n",
-    "dataset/\n",
-    "├── 0\n",
-    "│   ├── IMG_5950.jpg\n",
-    "│   ├── IMG_4496.jpg\n",
-    "│   ├── IMG_4926.jpg\n",
-    "├── 1\n",
-    "├── 2\n",
-    "├── 3\n",
-    "├── 4\n",
-    "├── 5\n",
-    "├── 6\n",
-    "├── 7\n",
-    "├── 8\n",
-    "├── 9\n",
-    "├── 10\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/aistudio\n"
-     ]
-    }
-   ],
-   "source": [
-    "%cd ./home/studio/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# 解压数据集\r\n",
-    "!unzip -oq /home/aistudio/data/data104441/Sign-language-digits-dataset.zip -d digit_sign"
+    "本项目数据集来源见：[Sign-Language-Digits-Dataset](https://github.com/ardamavi/Sign-Language-Digits-Dataset)   \n",
+    "我在AI Studio上也有上传：[Sign-language-digits-dataset](https://aistudio.baidu.com/aistudio/datasetdetail/104441)  \n",
+    "由于基础薄弱，又在理论上钻了牛角尖（，并且深受自身的拖延影响），进度迟迟停在$0.0\\dot{1}\\%$(x)。原先我使用的是Kaggle上的[`.npy`格式](https://www.kaggle.com/salihcanelikel/sign-language-digits-deep-learning)的数据集，分割完数据集后与现成模型匹配各种报错让人心烦。受[大作业](https://aistudio.baidu.com/aistudio/projectdetail/2270454)的启发，直接用原来的图像文件进行训练。  \n",
+    "目前只是依样画葫芦，很多参数设置等等还不明所以。  \n",
+    "\n",
+    "我明白我自己的水平还远远不够，会不断探索。  \n",
+    "另，本项目需GPU环境。\n"
    ]
   },
   {
@@ -108,6 +56,49 @@
     "    'learning_rate': 0.001, #学习率\r\n",
     "    'num_epoch': 100, #训练轮次\r\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## 数据集处理\n",
+    "### 数据集说明\n",
+    "共有10个文件夹，共2062个文件，分别为0—9十个数字，对应相应的手势。  \n",
+    "图片大小为100像素×100像素，分辨率为72dpi，颜色模式为RGB模式。  \n",
+    "\n",
+    "目录结构  \n",
+    "```\n",
+    "dataset/\n",
+    "├── 0\n",
+    "│   ├── IMG_5950.jpg\n",
+    "│   ├── IMG_4496.jpg\n",
+    "│   ├── IMG_4926.jpg\n",
+    "├── 1\n",
+    "├── 2\n",
+    "├── 3\n",
+    "├── 4\n",
+    "├── 5\n",
+    "├── 6\n",
+    "├── 7\n",
+    "├── 8\n",
+    "├── 9\n",
+    "├── 10\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# 解压数据集\r\n",
+    "!unzip -oq /home/aistudio/data/data104441/Sign-language-digits-dataset.zip -d digit_sign"
    ]
   },
   {
@@ -261,13 +252,15 @@
     "collapsed": false
    },
    "source": [
+    "## 更改配置\n",
     "### 相关设置\n",
     "主要是以下几点：分类数、图片总量、训练和验证的路径、图像尺寸、数据预处理、训练和预测的num_workers: 0\n",
     "\n",
     "路径如下：\n",
     ">PaddleClas/ppcls/configs/quick_start/new_user/ShuffleNetV2_x0_25.yaml\n",
     "\n",
-    "目前根据config更改了相应文件的相应内容，记得用快捷键`Ctrl+F`更好地找到修改\n",
+    "目前根据config更改了相应文件的相应内容，记得用快捷键`Ctrl+F`更好地找到修改，  \n",
+    "另外各个的路径要改，大小根据输入图片大小更改。\n",
     "```\n",
     "# global configs\n",
     "Global:\n",
@@ -440,6 +433,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## 训练模型\n",
+    "数据集不大，再加上GPU加速10min左右就能训练完100轮。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
@@ -458,6 +461,17 @@
     "# 开始训练\r\n",
     "!python3 tools/train.py \\\r\n",
     "    -c ./ppcls/configs/quick_start/new_user/ShuffleNetV2_x0_25.yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## 模型预测\n",
+    "### 单张图片预测\n",
+    "这里直接用了测试集的一张图片。"
    ]
   },
   {
